--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="http://" />
     <meta property="og:url" content="http://moshified.com" />
     <title>Moshify - Go Online For Just $9</title>
-    <link rel="stylesheet" href="node_modules/normalize.css/normalize.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -510,7 +510,9 @@
 
         <div class="footer__brand">
           <img src="assets/images/logo.svg" alt="" />
-          <p class="footer__copyright">&copy; Learning From Mosh Hamedani HTML Course</p>
+          <p class="footer__copyright">
+            &copy; Learning From Mosh Hamedani HTML Course
+          </p>
         </div>
       </div>
     </footer>
